# another_gb_emulator

./: .gitignore  CMakeLists.txt  main.cpp
3rd_parties/: CMakeLists.txt
include/cpu/: executor-impl.hpp  executor.h  instruction-impl.hpp  instruction.h  instruction_utils.h  logger-impl.hpp  logger.h  processor-impl.hpp  processor.h  registery.h  tracer-impl.hpp  tracer.h
include/memory/: cartridge.h  memory.h  mmio.h  rom.h
include/utils/: global.h  utils.h
include/video/: screen.h
src/cpu/: executor.cpp  instruction.cpp  logger.cpp  processor.cpp  tracer.cpp
src/memory/: cartridge.cpp  memory.cpp  mmio.cpp
src/video/: screen.cpp
tests/: CMakeLists.txt  registers_tests.cpp  utils_tests.cpp
